# NLPproject_end2end_tone_of_reviews

./: .gitignore  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
final/: dockerfile  requirements.txt  requirements_dev.txt  setup.py
final/app/: app.py
final/ml/: config.yaml  model.py  model_app.py  model_space.py  train_model.ipynb
final/ml/v1_GRU/: inference.py  train.py
final/ml/v1_GRU/data_set/: data_set.py
final/ml/v1_GRU/engine/: inferencer.py  trainer.py
final/ml/v1_GRU/models/: best_loss_val_0.139.pt  model.py  model_gru_semantic.tar
final/ml/v1_GRU/utils/: preprocessor.py
final/ml/v2_GPT/: baseline_transformers.ipynb
final/tests/: test_ml.py
