[project]
name = "nlpproject-end2end-tone-of-reviews"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "emoji>=2.15.0",
    "fastapi>=0.128.8",
    "inflect>=7.5.0",
    "ipykernel>=6.31.0",
    "ipynb>=0.5.1",
    "navec>=0.10.0",
    "nltk>=3.9.2",
    "pyaml>=26.2.1",
    "pydantic>=2.12.5",
    "pytest>=8.4.2",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.3",
    "uvicorn>=0.39.0",
]
